# conservation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/shaders/: circle.frag
app/src/: main.cpp
cmake/: SyncShaders.cmake
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
utilities/: CMakeLists.txt
utilities/include/utilities/: Camera.h  Shader.h  ShaderProgram.h  Spatial.h  Transform.h  constants.h  file.h
utilities/src/: Camera.cpp  Shader.cpp  ShaderProgram.cpp  Spatial.cpp  Transform.cpp  file.cpp
